# yorcloud_client

./: .gitignore  Cargo.toml  build_web.sh  start_server.sh
docs/: index.html  manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
src/assets/: icons.rs  mod.rs
src/assets/derive_assets/: Cargo.toml
src/assets/derive_assets/src/: lib.rs
src/widgets/: cloud_explorer.rs  mod.rs  nav_panel.rs  status_bar.rs
