[package]
name = "derive_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
strum = "0.24.1"

egui_extras = { version = "0.18.0", features = ["svg", "image"] }
image = { version = "0.24", features = ["png"] }